Bug 184110 - blackhole(4) manpage doesn`t describe net.inet.sctp.blackhole sysctl
Summary: blackhole(4) manpage doesn`t describe net.inet.sctp.blackhole sysctl
Status: Closed FIXED
Alias: None
Product: Documentation
Classification: Unclassified
Component: Manual Pages (show other bugs)
Version: Latest
Hardware: Any Any
: Normal Affects Only Me
Assignee: Allan Jude
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-20 09:50 UTC by BurSt
Modified: 2018-05-21 02:41 UTC (History)
3 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description BurSt 2013-11-20 09:50:00 UTC
FreeBSD 9.1 release notes describes new sysctl for sctp(4)net.inet.sctp.blackhole. But there are no other description for this variable but in relnotes.

http://www.freebsd.org/releases/9.1R/relnotes-detailed.html

How-To-Repeat: > man 4 blackhole
> man 4 sctp
Comment 1 Tom Rhodes freebsd_committer freebsd_triage 2014-01-08 19:44:45 UTC
Hi,

There are a lot of sctp sysctls that do not appear to be
documented in the manual pages.  Since I doubt we would update
the release notes post-release, it might be useful for someone
to mark them up.  Interested?

-- 
Tom Rhodes
Comment 2 Marie Helene Kvello-Aune 2015-07-23 13:10:57 UTC
I've made a pull request towards the github repo (https://github.com/freebsd/freebsd/pull/41) for documenting this.

Description:
Documented the sysctl MIB net.inet.sctp.blackhole in blackhole(4) man page, and updated MIB description to refer to said man page.

Also adjusted formatting under SYNOPSIS while here, to prevent cluttered line breaks in the middle of the optional parameters.

-

I think there should be a mention of whoever implemented SCTP blackholing (see commit 229805 (https://svnweb.freebsd.org/base?view=revision&revision=229805)) in the blackhole(4) man page, but I don't know their name. Therefore, I didn't touch that. When adding credit to them, there may also be a need to adjust the existing credit entry with more details.
Comment 3 Allan Jude freebsd_committer freebsd_triage 2015-08-29 16:57:23 UTC
https://reviews.freebsd.org/D3528
Comment 4 commit-hook freebsd_committer freebsd_triage 2015-09-07 01:22:33 UTC
A commit references this bug:

Author: allanjude
Date: Mon Sep  7 01:21:57 UTC 2015
New revision: 287528
URL: https://svnweb.freebsd.org/changeset/base/287528

Log:
  Document the sctp blackhole sysctl MIB

  PR:		184110
  Submitted by:	Marie Helene Kvello-Aune <marieheleneka@gmail.com>
  Reviewed by:	wblock
  Approved by:	wblock (mentor)
  MFC after:	1 week
  Differential Revision:	https://reviews.freebsd.org/D3528

Changes:
  head/share/man/man4/blackhole.4
Comment 5 commit-hook freebsd_committer freebsd_triage 2015-09-07 02:00:38 UTC
A commit references this bug:

Author: allanjude
Date: Mon Sep  7 02:00:06 UTC 2015
New revision: 287529
URL: https://svnweb.freebsd.org/changeset/base/287529

Log:
  missed file that should have been included in r287528

  PR:		184110
  Submitted by:	Marie Helene Kvello-Aune <marieheleneka@gmail.com>
  Approved by:	wblock (mentor)

Changes:
  head/sys/netinet/sctp_sysctl.h
Comment 6 Marie Helene Kvello-Aune 2015-09-07 08:43:34 UTC
sctp(4): https://reviews.freebsd.org/D3583
Comment 7 commit-hook freebsd_committer freebsd_triage 2016-01-12 05:54:42 UTC
A commit references this bug:

Author: allanjude
Date: Tue Jan 12 05:53:53 UTC 2016
New revision: 293727
URL: https://svnweb.freebsd.org/changeset/base/293727

Log:
  MFC: r287528
    Document the sctp blackhole sysctl MIB

  PR:		184110
  Submitted by:	Marie Helene Kvello-Aune <marieheleneka@gmail.com>

Changes:
_U  stable/10/
  stable/10/share/man/man4/blackhole.4