missed file that should have been included in r287528

PR:		184110
Submitted by:	Marie Helene Kvello-Aune <marieheleneka@gmail.com>
Approved by:	wblock (mentor)

Former-commit-id: 64903e33477b666998f615b6011b5e3aba6e0502